# my-python-app

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: main.py
